[package]
name = "poedata_import"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
poedata = { path = "../poedata" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_cbor_2 = { workspace = true }
serde-aux = { version = "4.7.0" }
which = { version = "8.0.2" }
reqwest = { version="0.13.2", features = ["blocking", "json"] }